@@ -1,5 +1,6 @@
 6 April 2009: Wouter
 	- windows compile fix.
+	- Detect FreeBSD jail without ipv6 addresses assigned.
 
 3 April 2009: Wouter
 	- Fixed a bug that caused messages to be stored in the cache too 
